--- a/templates/accounts/profile-details.html
+++ b/templates/accounts/profile-details.html
@@ -1,67 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/style.css">
-    <title>MyPlantApp</title>
-</head>
-
-<body>
-<div id="box">
-
-    <header>
-        <!-- Navigation Bar -->
-        <h1><a class="index-navigation" href="#">MyPlants</a></h1>
-        <nav>
-            <a href="#">Catalogue</a>
-            <a href="#">Create Plant</a>
-            <a href="#">Profile</a>
-        </nav>
-    </header>
-
-    <!-- profile details section -->
     <section id="plant-details">
         <h1>Profile Details</h1>
         <div class="info-section">
             <div class="plant-header">
-                <!-- default profile image (if the user does NOT have any)-->
-                    <img class="plant-img" src="/static/images/default.jpg" alt='profile-image'/>
-                <!-- if the user has a profile image -->
-                    <img class="plant-img" src="" alt='profile-image'/>
-                <!-- user full name -->
-                <h1>Svetoslava Stoyanova</h1>
+                {% if not profile.profile_picture %}
+                    <img class="plant-img" src="{% static '/images/default.jpg'%}" alt='profile-image'/>
+                {% else %}
+                    <img class="plant-img" src={{ profile.profile_picture }}#" alt='profile-image'/>
+                {% endif %}
+                <h1>{{ profile.first_name}}  {{ profile_last_name }}</h1>
+                <p class="description">Username: {{ profile.username }}</p>
+                <p class="description">Total stars: </p>
+                {% if plants %}
 
-                <!-- user username -->
-                <p class="description">Username: SS1234</p>
-
-                <p class="description">Total stars:</p>
-                <!-- if the user has only one plant -->
-                <img class="star-img" src="/static/images/star3.png" alt='profile-image'/>
-                <!-- if the user has two plants -->
-                <img class="star-img" src="/static/images/star3.png" alt='profile-image'/>
-                <img class="star-img" src="/static/images/star3.png" alt='profile-image'/>
-                <!-- if the user has three or more plants -->
-                <img class="star-img" src="/static/images/star3.png" alt='profile-image'/>
-                <img class="star-img" src="/static/images/star3.png" alt='profile-image'/>
-                <img class="star-img" src="/static/images/star3.png" alt='profile-image'/>
-                <!-- if the user has zero plants -->
-                <p class="description">Total stars: 0</p>
-
-                <!-- Edit/Delete buttons -->
+                    {% for plant in plants %}
+                        <img class="star-img" src="{% static '/images/star3.png' %}" alt='profile-image'/>
+                    {% endfor %}
+                {% else %}
+                    <p class="description">Total stars: 0</p>
+                {% endif %}
                 <div class="buttons">
-                    <a href="#" class="edit-button">Edit</a>
-                    <a href="#" class="delete-button">Delete</a>
+                    <a href="{% url 'edit_profile' %}" class="edit-button">Edit</a>
+                    <a href="{% url 'delete_profile' %}" class="delete-button">Delete</a>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- footer -->
-    <footer>
-        &copy;SoftUni Team 2022. All rights reserved.
-    </footer>
-</div>
-</body>
-</html>
+{% endblock %}
