--- a/templates/common/home-page.html
+++ b/templates/common/home-page.html
@@ -1,29 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/style.css"/>
-    <title>MyPlantApp</title>
-</head>
-
-<body>
-<div id="box">
-    <header>
-        <!-- Navigation Bar -->
-        <h1><a class="index-navigation" href="{% url 'home_page' %}">MyPlants</a></h1>
-        <nav>
-            <!-- if the user has not created a profile -->
-                <a href="{% url 'create_profile' %}">Create Profile</a>
-
-            <!-- if the user has created a profile -->
-                <a href="{% url 'show_catalogue' %}">Catalogue</a>
-                <a href="{% url 'create_plant' %}">Create Plant</a>
-                <a href="{% url 'profile_details' %}">Profile</a>
-        </nav>
-    </header>
-
+{% block content %}
     <!-- headlines -->
     <section id="index-headline">
         <div class="index-message">
@@ -33,12 +10,5 @@
         </div>
 
     </section>
+{% endblock %}
 
-    <!-- footer -->
-    <footer>
-        &copy;SoftUni Team 2023. All rights reserved.
-    </footer>
-
-</div>
-</body>
-</html>
